syntax = "proto3";

option go_package = "github.com/stealthrocket/net/grpc";

package grpc;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string text = 1;
}
